; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/setkey/extr_test-policy.c_setpolicy.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/setkey/extr_test-policy.c_setpolicy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [25 x i8] c"ipsec_get_policylen: %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"malloc\00", align 1
@.str.2 = private unnamed_addr constant [22 x i8] c"ipsec_set_policy: %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @setpolicy(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 @ipsec_get_policylen(i8* %6)
  store i32 %7, i32* %4, align 4
  %8 = icmp slt i32 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = call i8* (...) @ipsec_strerror()
  %11 = call i32 @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i8* %10)
  store i8* null, i8** %2, align 8
  br label %31

12:                                               ; preds = %1
  %13 = load i32, i32* %4, align 4
  %14 = call i8* @malloc(i32 %13)
  store i8* %14, i8** %5, align 8
  %15 = icmp eq i8* %14, null
  br i1 %15, label %16, label %18

16:                                               ; preds = %12
  %17 = call i32 @perror(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  store i8* null, i8** %2, align 8
  br label %31

18:                                               ; preds = %12
  %19 = load i8*, i8** %5, align 8
  %20 = load i32, i32* %4, align 4
  %21 = load i8*, i8** %3, align 8
  %22 = call i32 @ipsec_set_policy(i8* %19, i32 %20, i8* %21)
  store i32 %22, i32* %4, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %29

24:                                               ; preds = %18
  %25 = call i8* (...) @ipsec_strerror()
  %26 = call i32 @printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0), i8* %25)
  %27 = load i8*, i8** %5, align 8
  %28 = call i32 @free(i8* %27)
  store i8* null, i8** %2, align 8
  br label %31

29:                                               ; preds = %18
  %30 = load i8*, i8** %5, align 8
  store i8* %30, i8** %2, align 8
  br label %31

31:                                               ; preds = %29, %24, %16, %9
  %32 = load i8*, i8** %2, align 8
  ret i8* %32
}

declare dso_local i32 @ipsec_get_policylen(i8*) #1

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i8* @ipsec_strerror(...) #1

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i32 @ipsec_set_policy(i8*, i32, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
